# Read-LevelDB

./: CMakeLists.txt  README.MD  test  test.cpp
db/: builder.cpp  builder.h  db_impl.cpp  db_impl.h  db_iter.cpp  db_iter.h  dbformat.cc  dbformat.h  dumpfile.cpp  filename.cpp  filename.h  log_format.h  log_reader.cc  log_reader.h  log_writer.cc  log_writer.h  memtable.cc  memtable.h  skiplist.h  snapshot.h  table_cache.cpp  table_cache.h  version_edit.cpp  version_edit.h  version_set.cpp  version_set.h  write_batch.cpp  write_batch_internal.h
include/leveldb/: cache.h  comparator.h  db.h  dumpfile.h  env.h  export.h  filter_policy.h  iterator.h  options.h  slice.h  status.h  table.h  table_builder.h  write_batch.h
notes/: 0x00 LevelDB整体架构.md  0x10 LevelDB中的基本数据结构.md  Get过程.md
pic/: overview.drawio  record.drawio
port/: port.h  port_stdcxx.h  thread_annotations.h
table/: block.cc  block.h  block_builder.cc  block_builder.h  filter_block.cpp  filter_block.h  format.cc  format.h  iterator.cc  iterator_wrapper.h  merger.cpp  merger.h  table.cpp  table_builder.cpp  two_level_iterator.cpp  two_level_iterator.h
util/: arena.cc  arena.h  bloom.cc  cache.cpp  coding.cc  coding.h  comparator.cc  env.cpp  env_posix.cc  env_posix_test_helper.h  filter_policy.cc  hash.cc  hash.h  logging.cpp  logging.h  mutexlock.h  options.cpp  posix_logger.h  random.h  status.cc
